--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="navbar">
-        <a href="../index/index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="#contact">Contact</a>
       </div>
       
